fixed build ranges.